force-app/main/default/objects/FedEx_Tracking_Event__c/FedEx_Tracking_Event__c.object-meta.xml
<CustomObject>
    <label>FedEx Tracking Event</label>
    <nameField>
        <label>FedEx Tracking Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Tracking Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>