force-app/main/default/objects/FedEx_Tracking_Event__c/fields/Deduplication_Key__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Key__c</fullName>
    <externalId>true</externalId>
    <label>Deduplication Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>