force-app/main/default/objects/FedEx_Tracking_Event__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <label>Event Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>