force-app/main/default/objects/FedEx_Tracking_Event__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>FedEx_Shipment__c</referenceTo>
    <relationshipLabel>FedEx Tracking Events</relationshipLabel>
    <relationshipName>FedEx_Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>